--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,17 +82,90 @@ div {
     width: 85%  ;
 }
 
+.sub-block-one {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+
+.company h1 {
+    margin-top: 5px;
+    margin-left: 15px;
+    margin-bottom: 0px;
+    float: left;
+}
+
+.company .date {
+    margin-right: 15px;
+    float: right;
+}
+
+.company .title {
+    margin-top: 60px;
+    text-align: center;
+    font-size: 25px;
+}
+
+.company .description {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.sub-block-two {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+.sub-block-three {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+.sub-block-four{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+.sub-block-five {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+.sub-block-six {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    top: 0px;
+    background-color: rgba(74, 74, 74, 0.91);
+    color: #FFFFFF;
+    overflow: hidden;
+}
+
 .krealinks {
     background-color: #292929;
     background-image: url("img/KREALINKS_logo1-big.png");
     background-size: 100% 100%;
 }
-
-/*.krealinks div {*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*background-color: rgba(255, 255, 255, 0.86);*/
-/*}*/
 
 .sncf {
     background-color: #292929;
@@ -100,12 +173,6 @@ div {
     background-size: 100% 100%;
 
 }
-
-/*.sncf div {*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*background-color: rgba(255, 255, 255, 0.86);*/
-/*}*/
 
 .webapp {
     background-color: #292929;
@@ -119,20 +186,6 @@ div {
     background-size: 100% 100%;
 }
 
-.ageval div {
-    background-color: black;
-    height: 100%;
-}
-.ageval div:hover {
-    visibility: hidden;
-}
-
-/*.webapp div {*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*background-color: rgba(255, 255, 255, 0.86);*/
-/*}*/
-
 .jrled {
     background-color: #292929;
     background-image: url("img/loog-jrleds.png");
@@ -144,13 +197,6 @@ div {
     background-image: url("img/logo-macdonald.png");
     background-size: 100% 100%;
 }
-
-/*.jrled div {*/
-    /*height: 100%;*/
-    /*width: 100%;*/
-    /*background-color: rgba(255, 255, 255, 0.86);*/
-/*}*/
-
 
 /*******************************************/
 /************** generic ********************/
@@ -201,4 +247,8 @@ s-h-100-p {
 
 .mrg-top-50-px {
     margin-top: 50px;
+}
+
+.mrg-top-20-px {
+    margin-top: 20px;
 }
