--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,9 +169,12 @@ div {
 }
 .sub-skill {
     width: 85%;
+    height: 100%;
     position: relative;
 }
 .diploma {
+    position: absolute;
+    z-index: 10000;
     width: 100%;
     margin-top: 100px;
     border-radius: 5px;
@@ -196,7 +199,7 @@ div {
     height: 32%;
     width: 100%;
     border: 1px solid #545656;
-    background-color: #ededed;
+    background-color: #f9f9f9;
     position: relative;
 }
 .diplomaOne img {
@@ -220,6 +223,36 @@ div {
 }
 .skillDev {
     width: 100%;
+    height: 100%;
+    background-color: rgba(71, 71, 71, 0.6);
+}
+.skillDevSoft {
+    width: 70%;
+    height: 100%;
+}
+
+.skillDevLan {
+    width: 30%;
+    height: 70%;
+}
+.skillDevLan h1 {
+    margin-bottom: 5px;
+}
+
+.skillDevLan h2 {
+    margin-top: 5px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+.skillDevLan p{
+    margin-top: 0px;
+    margin-left: 20px;
+    margin-bottom: 0px;
+}
+
+.skillDevProject {
+    width: 30%;
+    height: 30%;
 }
 
 .progress {
