--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,10 +173,12 @@ div {
     position: relative;
 }
 .diploma {
-    position: absolute;
-    z-index: 10000;
+    /*position: absolute;*/
+    /*z-index: 10000;*/
     width: 100%;
-    margin-top: 100px;
+    /*height: 20%;*/
+    margin-top: 50px;
+    margin-bottom: 50px;
     border-radius: 5px;
     border: 3px solid #545656;
 }
@@ -223,7 +225,7 @@ div {
 }
 .skillDev {
     width: 100%;
-    height: 100%;
+    height: 80%;
     background-color: rgba(71, 71, 71, 0.6);
 }
 .skillDevSoft {
