--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,52 +178,41 @@ div {
 
 .diploma {
     width: 90%;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    border-radius: 5px;
-    border: 3px solid #545656;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.arrow {
-    position: absolute;
-    width: 60px;
-    border: 2px solid #545656;
-    border-radius: 0px 0px 35px 35px;
-}
-.arrowImg {
-    margin-left: 4px;
-    width: 52px;
-}
-.arrowRotation {
-    transform: rotate(180deg);
-}
-
-.diplomaOne, .diplomaTwo, .diplomaThree {
-    height: 32%;
+.diplomaOne, .diplomaTwo, .diplomaThree, .diplomaFour {
+    height: 15%;
     width: 100%;
+    margin-top: 30px;
     border: 1px solid #545656;
     background-color: #f9f9f9;
     position: relative;
 }
-.diplomaOne img {
+
+.diplomaOne h1, .diplomaTwo h1, .diplomaThree h1, .diplomaFour h1 {
+    margin-top: 0;
+}
+
+.diplomaOne img, .diplomaTwo img, .diplomaThree img, .diplomaFour img {
     width: 100px;
     float: left;
 }
-.diplomaOne h1 {
-    margin: 0px 30px 0px 30px;
+
+
+.diplomaOne p, .diplomaTwo p, .diplomaThree p, .diplomaFour p {
+    font-size: 20px;
+    margin: 0px;
 }
-.diplomaOne .date {
+
+.diplomaOne .date, .diplomaTwo .date, .diplomaThree .date, .diplomaFour .date {
     float: right;
-    margin: 10px 10% 0px 30px;
     font-size: 30px;
     font-weight: 900;
 }
-.diplomaTwo {
-    height: 120px;
-}
-.diplomaThree {
-    height: 120px;
-}
+
 .skillDev {
     width: 100%;
     height: 80%;
